--- a/Muon-Lab/MD Test/Muon.html
+++ b/Muon-Lab/MD Test/Muon.html
@@ -63,15 +63,17 @@
 <p>Discuss with your partner what you think is happening here. Call the your TA over and explain to them what you and your partner have discussed.</p>
 </div>
 </div>
-<h2 id="impedance-2">Impedance 2</h2>
-<p>If you studied analog electronics, you’ve had some experience with impedances and this section may just serve as review. Impedance is something one considers when dealing with time varying signals is frequency dependent. It is analogous to resistance for direct current (DC) circuits. It is expressed as a complex number.</p>
-<p><span class="math display">\[Z = R + iX(f)\]</span></p>
-<p>For this lab we don’t need to consider the consider the frequency dependent part of the lab. (I actually don’t know, this is just a test an assumption. If so should we have the students do a calculation?) So we will focus on the real part of the impedance.</p>
-<p>In analog circuits, when you connect two circuits together you typically as trying to pass information about the voltage from one circuit to the next. It would not be good if the second circuit were to affect the voltage signal from the first circuit. To limit the effect of the second circuit on the first you were taught that the first circuit should have a low output impedance, and the second circuit should have high input impedance.</p>
-<p>Here is simplified drawing of connecting two circuits. We want all fo the voltage information from the circuit in device A to be passed the circuit in device B. We want <span class="math inline">\(V_{in}=V_{out}\)</span>. We further simplify the model of the two circuits by drawing the device as a simple voltage divider.</p>
+<h2 id="photomultiplier-tubes-pmts">Photomultiplier Tubes (PMT’s)</h2>
+<p><a href="https://en.wikipedia.org/wiki/Photomultiplier_tube">Photomultilplier tubes</a> work by the <a href="https://en.wikipedia.org/wiki/Photoelectric_effect">photoelectric effect</a> and by <a href="https://en.wikipedia.org/wiki/Secondary_emission">secondary emission</a>.</p>
 <figure>
-<img src="./imgs/Impedance.svg" alt="" /><figcaption>Impedance Circuit Diagram</figcaption>
+<img src="./imgs/PMT_Scint.svg" alt="" /><figcaption>Cross-section of PMT</figcaption>
 </figure>
-<p>When passing signals from one device to another we often don’t</p>
+<p>Above is a cross section of a PMT with a scintillator. The scintillator gives off a photon that enters the PMT.</p>
+<div class="QNumber">
+<p>Question 5</p>
+<div class="Question">
+<p>Discuss with your partner how where and how each of the effects play a role in the PMT functionality.</p>
+</div>
+</div>
 </body>
 </html>
